// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`licence-for > update-transaction default should clear personal information from _current_ permission if licence for has changed from someone-else to you 1`] = `
Object {
  "licence-for": Object {
    "payload": Object {
      "continue": "",
      "licence-for": "you",
    },
  },
}
`;

exports[`licence-for > update-transaction default should clear personal information from _current_ permission if licence for has changed from you to someone-else 1`] = `
Object {
  "licence-for": Object {
    "payload": Object {
      "continue": "",
      "licence-for": "someone-else",
    },
  },
}
`;

exports[`licence-for > update-transaction default should clear personal information from session if licence for has changed from someone-else to you 1`] = `
Object {
  "licence-for": Object {
    "payload": Object {
      "continue": "",
      "licence-for": "you",
    },
  },
}
`;

exports[`licence-for > update-transaction default should clear personal information from session if licence for has changed from you to someone-else 1`] = `
Object {
  "licence-for": Object {
    "payload": Object {
      "continue": "",
      "licence-for": "someone-else",
    },
  },
}
`;
